# robotik_son_hal

blob_finder/: CMakeLists.txt  package.xml
blob_finder/src/: object_pose_node.cpp
find-object/launch/: find_object_2d_gui.launch
find-object/objects/: zzzzz.sh
find-object/src/ros/: print_objects_detected_node.cpp
object_marker/: CMakeLists.txt  package.xml
object_marker/include/object_marker/: object_marker.h
object_marker/msg/: ObjectCbMessage.msg
object_marker/src/: object_marker.cpp
pioneer3at_demo/p3at_description/launch/: empty_world_multi_robot_example.launch  exp1.launch  exp2.launch  exp3.launch  exp4.launch  mob1.launch  p3at.launch
pioneer3at_demo/p3at_description/urdf/: imu.urdf.xacro  normal_camera.urdf.xacro  pioneer3at.urdf.xacro  pioneer3at_body.xacro
pioneer3at_demo/p3at_description/yaml/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  (+1 more)
robot_nav/: CMakeLists.txt  package.xml
robot_nav/launch/: navigation.launch
robot_nav/yaml/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
rtg_proje/: CMakeLists.txt  package.xml
rtg_proje/launch/: explore.launch  mapping.launch  rtg_proje.launch  start.launch
rtg_proje/rviz/: rtg_proje.rviz
rtg_proje/scripts/: keyboard_cmdvel.py
rtg_proje/worlds/: exp3_alan.world
zbar_ros/: CMakeLists.txt
zbar_ros/launch/: example.launch
zbar_ros/src/: barcode_reader_nodelet.cpp
(+2 files in other folders)
