<?xml version="1.0"?>
<package>
  <name>rtg_proje</name>
  <version>0.0.0</version>
  <description>The rtg_proje Package</description>
  <maintainer email="nihaltun@yildiz.edu.tr">nihal</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  
  <run_depend>gazebo_ros</run_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
